dark mode icons

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <span class="en">EN</span>
             <span class="hu">HU</span>
           </div>
+          <div class="screen__mode">
+            <span class="sun"><i class="far fa-sun"></i></span>
+          </div>
           <div class="hamburger">
             <div class="bar"></div>
           </div>
@@ -380,7 +383,7 @@
 
     <!-- TESTIMONIAL -->
 
-    <section class="testimonial section bd__container" id="testimonial">
+    <section class="testimonial section bd__container" id="testimonials">
       <div class="section__hidden hidden">
 
         <span class="section__subtitle">My recents work</span>
