--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <span class="hu">HU</span>
           </div>
           <div class="screen__mode">
-            <span class="sun"><i class="far fa-sun"></i></span>
+            <span class="sun"><i class="fas fa-sun"></i></span>
           </div>
           <div class="hamburger">
             <div class="bar"></div>
@@ -62,17 +62,20 @@
 
     <section class="home">
       <div class="home__container bd__container ">
-        <div class="home__greeting">
-          <h3 class="home__hi">Hello</h3>
+        <div class="home__greeting greeting__hidden">
+          <div class="greeting__slide">
+
+            <h3 class="greeting__text">Hello</h3>
+          </div>
           <!-- <a download="" href="" class="button">Download CV</a> -->
         </div>
         <div class="home__bottom">
-          <div class="home__social">
-            <a href="#" class="home__social-icon"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="home__social-icon"><i class="fab fa-linkedin"></i></a>
-            <a href="#" class="home__social-icon"><i class='fab fa-github'></i></a>
+          <div class="home__social social__hidden">
+            <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
+            <a href="#" class="social-icon"><i class='fab fa-github'></i></a>
           </div>
-          <div class="home__introduction">
+          <div class="home__introduction introduction__hidden">
             <h3 class="home__iam">I am</h3>
             <h3 class="home__name">Bence</h3>
             <h3 class="home__profession">Web Developer</h3>
@@ -130,9 +133,9 @@
         <span class="section__subtitle">Competence</span>
         <h2 class="section__title">Skills</h2>
 
-        <h2 class="skills__title">
+        <h3 class="skills__title">
           <i class="fas fa-code skills__title-icon"></i>Professional Skills
-        </h2>
+        </h3>
         <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet,
           alias architecto consectetur error eum eaque sit.</p>
         <div class="skills__container bd__grid">
@@ -210,10 +213,10 @@
 
         <div class="qualification__container bd__grid">
           <div class="qualification__content">
-            <h2 class="qualification__title">
+            <h3 class="qualification__title">
               <i class="fas fa-suitcase qualification__title-icon"></i>
               Work Experience
-            </h2>
+            </h3>
             <div class="bd__grid">
 
               <div class="qualification__data">
@@ -247,10 +250,10 @@
           </div>
 
           <div class="qualification__content">
-            <h2 class="qualification__title">
+            <h3 class="qualification__title">
               <i class="fas fa-university qualification__title-icon"></i>
               Education
-            </h2>
+            </h3>
             <div class="bd__grid">
 
               <div class="qualification__data">
@@ -346,7 +349,7 @@
     <section class="portfolio section bd__container" id="portfolio">
       <div class="section__hidden hidden">
         <span class="section__subtitle">My recents work</span>
-        <h2 class="section__title">Portfilio</h2>
+        <h2 class="section__title">Portfolio</h2>
         <div class="portfolio__nav">
           <span class="portfolio__item">All</span>
           <span class="portfolio__item">Web</span>
@@ -456,12 +459,12 @@
 
     <footer class="footer">
       <div class="footer__container bd__container">
-        <h1 class="footer__title">Bence</h1>
+        <h2 class="footer__title">Bence</h2>
         <p class="footer__description">Hope I hear from you soon</p>
         <div class="footer__social">
-          <a href="#" class="footer__link"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="footer__link"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="footer__link"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
         </div>
         <p class="footer__copy">&#169; <span class="date"></span> Bence Botar</p>
       </div>
