--- a/index.html
+++ b/index.html
@@ -30,19 +30,18 @@
       <div class="nav__menu">
 
         <ul class="nav__list">
-          <li class="nav__item"><a href="#about" class="nav__link active-link">About</a></li>
-          <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-          <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
-          <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
-          <li class="nav__item"><a href="#testimonials" class="nav__link">Testimonials</a></li>
-          <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+          <li class="nav__item"><a href="#about" class="nav__link txt active-link">About</a></li>
+          <li class="nav__item"><a href="#skills" class="nav__link txt">Skills</a></li>
+          <li class="nav__item"><a href="#services" class="nav__link txt">Services</a></li>
+          <li class="nav__item"><a href="#portfolio" class="nav__link txt">Portfolio</a></li>
+          <li class="nav__item"><a href="#contact" class="nav__link txt">Contact</a></li>
         </ul>
 
         <!--Nav Buttons  -->
 
         <div class="nav__buttons">
           <div class="language__selector">
-            <span class="en">EN</span>
+            <span class="en language__active">EN</span>
             <span class="hu">HU</span>
           </div>
           <div class="screen__mode">
@@ -76,9 +75,9 @@
             <a href="#" class="social-icon"><i class='fab fa-github'></i></a>
           </div>
           <div class="home__introduction introduction__hidden">
-            <h3 class="home__iam">I am</h3>
-            <h3 class="home__name">Bence</h3>
-            <h3 class="home__profession">Web Developer</h3>
+            <h3 class="home__iam txt">I am</h3>
+            <h3 class="home__name txt">Bence</h3>
+            <h3 class="home__profession txt">Web Developer</h3>
           </div>
         </div>
       </div>
@@ -88,33 +87,29 @@
 
     <section class="about section bd__container" id="about">
       <div class="section__hidden hidden">
-        <span class="section__subtitle">My history</span>
-        <h2 class="section__title">About Me</h2>
+        <span class="section__subtitle txt">My history</span>
+        <h2 class="section__title txt">About Me</h2>
         <div class="about__container bd__grid">
           <div class="about__data bd__grid">
-            <p class="about__description"><span>Hello, <br></span>Botár Bence vagyok és Budapesten élek. Professzionális
-              zenészként eltöltött 20 év után, a
-              2020/21-es pandémia okozta korlátozások alatt kezdtem új kihívásokat keresni.
-              Mindig is érdekeltek a kreatív, építő, alkotó és elgondolkodtató feladatok, ezért döntöttem úgy, hogy
-              belevágok
-              a webfejlesztésbe.
+            <p class="about__description ">Botár Bence vagyok és Budapesten élek.
+              Professzionális zenészként eltöltött 20 év után, a 2020/21-es pandémia okozta korlátozások alatt kezdtem
+              új kihívásokat keresni. Mindig is érdekeltek a kreatív, építő, alkotó és elgondolkodtató feladatok, ezért
+              döntöttem úgy, hogy
+              belevágok a webfejlesztésbe.
 
               2020 tavaszán részt vettem a GreenFox Academy több hetes „MyFirstApp Coding” tréningjén, sikeresen
-              elvégeztem
-              2020 nyarán a magyar állam által támogatott „Újratervezés programot”, illetve mindezzel párhuzamosan
-              folyamatosan képeztem magam a freeCodeCamp és Udemy online webfejlesztői kurzusain.
+              elvégeztem 2020 nyarán a magyar állam által támogatott „Újratervezés programot”, illetve mindezzel
+              párhuzamosan folyamatosan képeztem magam a freeCodeCamp és Udemy online webfejlesztői kurzusain.<br>
 
               Célom, olyan projektek megvalósítása, ahol az eddig megszerezett tudásomat alkalmazhatom és
-              gyarapíthatom
-              a
-              gyakorlatban.</p>
+              gyarapíthatom a gyakorlatban.
             <div>
               <span class="about__number">1+</span>
-              <span class="about__achievement">Years of Experience</span>
+              <span class="about__achievement txt">Years of Experience</span>
             </div>
             <div>
               <span class="about__number">10+</span>
-              <span class="about__achievement">Projects</span>
+              <span class="about__achievement txt">Projects</span>
             </div>
 
           </div>
@@ -130,14 +125,11 @@
     <section class="skills section bd__container" id="skills">
       <div class="section__hidden hidden">
 
-        <span class="section__subtitle">Competence</span>
-        <h2 class="section__title">Skills</h2>
+        <span class="section__subtitle txt">Competence</span>
+        <h2 class="section__title txt">Skills</h2>
 
-        <h3 class="skills__title">
-          <i class="fas fa-code skills__title-icon"></i>Professional Skills
-        </h3>
-        <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet,
-          alias architecto consectetur error eum eaque sit.</p>
+        <h3 class="skills__title txt"><i class="fas fa-code skills__title-icon"></i>Professional Skills</h3>
+        <p class="skills__text txt">Lorem ipsum dolor sit.</p>
         <div class="skills__container bd__grid">
 
           <div class="skills__data">
@@ -208,19 +200,18 @@
     <section class="qualifications section bd__container">
       <div class="section__hidden hidden">
 
-        <span class="section__subtitle">Experience and Education</span>
-        <h2 class="section__title">Qualifications</h2>
+        <span class="section__subtitle txt">Experience and Education</span>
+        <h2 class="section__title txt">Qualifications</h2>
 
         <div class="qualification__container bd__grid">
           <div class="qualification__content">
-            <h3 class="qualification__title">
-              <i class="fas fa-suitcase qualification__title-icon"></i>
-              Work Experience
+            <h3 class="qualification__title txt">
+              <i class="fas fa-suitcase qualification__title-icon"></i>Work Experience
             </h3>
             <div class="bd__grid">
 
               <div class="qualification__data">
-                <h3 class="qualification__area">Junior Front End Developer</h3>
+                <h3 class="qualification__area txt">Junior Front End Developer</h3>
                 <div class="qualification__box">
                   <span class="qualification__work">
                     <i class="fas fa-suitcase qualification-icon"></i>
@@ -234,7 +225,7 @@
               </div>
 
               <div class="qualification__data">
-                <h3 class="qualification__area">UI/UX Designer</h3>
+                <h3 class="qualification__area txt">UI/UX Designer</h3>
                 <div class="qualification__box">
                   <span class="qualification__work">
                     <i class="fas fa-suitcase qualification-icon"></i>
@@ -250,14 +241,13 @@
           </div>
 
           <div class="qualification__content">
-            <h3 class="qualification__title">
-              <i class="fas fa-university qualification__title-icon"></i>
-              Education
+            <h3 class="qualification__title txt">
+              <i class="fas fa-university qualification__title-icon"></i>Education
             </h3>
             <div class="bd__grid">
 
               <div class="qualification__data">
-                <h3 class="qualification__area">Online Course</h3>
+                <h3 class="qualification__area txt">Online Course</h3>
                 <div class="qualification__box">
                   <span class="qualification__work">
                     <i class="fas fa-book qualification-icon"></i>
@@ -271,7 +261,7 @@
               </div>
 
               <div class="qualification__data">
-                <h3 class="qualification__area">Online Course</h3>
+                <h3 class="qualification__area txt">Online Course</h3>
                 <div class="qualification__box">
                   <span class="qualification__work">
                     <i class="fas fa-book qualification-icon"></i>
@@ -294,30 +284,30 @@
     <section class="services section bd__container" id="services">
       <div class="section__hidden hidden">
 
-        <span class="section__subtitle">What I offer</span>
-        <h2 class="section__title">Services</h2>
+        <span class="section__subtitle txt">What I offer</span>
+        <h2 class="section__title txt">Services</h2>
 
         <div class="services__container bd__grid">
 
           <div class="services__data">
             <i class="fas fa-project-diagram"></i>
-            <h3 class="services__title">UI/UX Design</h3>
-            <p class="services__description">asfgsdgsdfgsdfgsdfgsdfgsdfgsdfgd</p>
-            <a href="" class="button">Know More</a>
+            <h3 class="services__title txt">UI/UX Design</h3>
+            <p class="services__description txt">asfgsdgsdfgsdfgsdfgsdfgsdfgsdfgd</p>
+            <a href="" class="button txt">Know More</a>
           </div>
 
           <div class="services__data">
             <i class="fas fa-laptop-code"></i>
-            <h3 class="services__title">Web development</h3>
-            <p class="services__description">asfgsdfsssfsffgsdfgsdfgsdfgd</p>
-            <a href="" class="button">Know More</a>
+            <h3 class="services__title txt">Web development</h3>
+            <p class="services__description txt">asfgsdfsssfsffgsdfgsdfgsdfgd</p>
+            <a href="" class="button txt">Know More</a>
           </div>
 
           <div class="services__data">
             <i class="fas fa-pencil-ruler"></i>
-            <h3 class="services__title">Graphic Design</h3>
-            <p class="services__description">Coming Soon</p>
-            <a href="" class="button">Know More</a>
+            <h3 class="services__title txt">Graphic Design</h3>
+            <p class="services__description txt">Coming Soon</p>
+            <a href="" class="button txt">Know More</a>
           </div>
         </div>
       </div>
@@ -333,11 +323,11 @@
             <i class="bx bx-spreadsheet project__icon"></i>
 
             <div>
-              <h2 class="project__title">Projects in mind</h2>
-              <p class="project__description">Contact me if you would like your ideas to be implemented</p>
+              <h2 class="project__title txt">Projects in mind</h2>
+              <p class="project__description txt">Contact me if you would like your ideas to be implemented</p>
             </div>
             <div>
-              <a href="" class="button button-light">Hire Me</a>
+              <a href="" class="button button-light txt">Hire Me</a>
             </div>
           </div>
 
@@ -348,10 +338,10 @@
 
     <section class="portfolio section bd__container" id="portfolio">
       <div class="section__hidden hidden">
-        <span class="section__subtitle">My recents work</span>
-        <h2 class="section__title">Portfolio</h2>
+        <span class="section__subtitle txt">My recents work</span>
+        <h2 class="section__title txt">Portfolio</h2>
         <div class="portfolio__nav">
-          <span class="portfolio__item">All</span>
+          <span class="portfolio__item txt">All</span>
           <span class="portfolio__item">Web</span>
           <span class="portfolio__item">UI</span>
           <span class="portfolio__item">App</span>
@@ -361,43 +351,31 @@
           <div class="portfolio__content">
             <a href=""><img src="" class="portfolio__img" alt=""></a>
             <div class="portfolio__data">
-              <span class="portfolio__subtitle">Web dev</span>
+              <span class="portfolio__subtitle txt">Web development</span>
               <a href="">
-                <h2 class="portfolio__title">New portfolio</h2>
+                <h2 class="portfolio__title txt">New portfolio</h2>
               </a>
-              <a href="" class="button button-link">View Details</a>
+              <a href="" class="button button-link txt">View Details</a>
             </div>
           </div>
-
-          <div class="portfolio__content">
-            <a href=""><img src="" class="portfolio__img" alt=""></a>
-            <div class="portfolio__data">
-              <span class="portfolio__subtitle">Web dev</span>
-              <a href="">
-                <h2 class="portfolio__title">New portfolio</h2>
-              </a>
-              <a href="" class="button button-link">View Details</a>
-            </div>
-          </div>
-
         </div>
       </div>
     </section>
 
     <!-- TESTIMONIAL -->
 
-    <section class="testimonial section bd__container" id="testimonials">
+    <section class="testimonial section bd__container">
       <div class="section__hidden hidden">
 
-        <span class="section__subtitle">My recents work</span>
-        <h2 class="section__title">Testimonial</h2>
+        <span class="section__subtitle txt">Client reviews</span>
+        <h2 class="section__title txt">Testimonial</h2>
         <div class="testimonial__container">
           <div>
             <div class="testimonial__content">
               <img src="" class="testimonial__img" alt="">
               <h3 class="testimonial__title">Nik</h3>
-              <span class="testimonial__client">Client</span>
-              <p class="testimonial__description">sdgagfeyegrjhntmjkmyynyhjbyhtybertverg</p>
+              <span class="testimonial__client txt">Client</span>
+              <p class="testimonial__description txt">sdgagfeyegrjhntmjkmyynyhjbyhtybertverg</p>
             </div>
           </div>
         </div>
@@ -409,20 +387,20 @@
     <section class="contact section bd__container" id="contact">
       <div class="section__hidden hidden">
 
-        <span class="section__subtitle">My recents work</span>
-        <h2 class="section__title">Contact me</h2>
+        <span class="section__subtitle txt">Feel free to</span>
+        <h2 class="section__title txt">Contact me</h2>
 
         <div class="contact__container bd__grid">
 
           <div class="contact__content bd__grid">
             <div class="contact__box">
               <i class="fas fa-map-marked-alt contact__icon"></i>
-              <h3 class="contact__title">Location</h3>
-              <span class="contact__description">Budapest, Hungary</span>
+              <h3 class="contact__title txt">Location</h3>
+              <span class="contact__description txt">Budapest, Hungary</span>
             </div>
             <div class="contact__box">
               <i class="fas fa-phone-alt contact__icon"></i>
-              <h3 class="contact__title">Phone</h3>
+              <h3 class="contact__title txt">Phone</h3>
               <span class="contact__description">555-CALL-ME</span>
             </div>
             <div class="contact__box">
@@ -432,10 +410,10 @@
             </div>
             <div class="contact__box">
               <i class="fas fa-comments contact__icon"></i>
-              <h3 class="contact__title">Chat</h3>
-              <a href="" class="contact__social"><i class="fab fa-facebook-messenger contact__icon"></i></a>
-              <a href="" class="contact__social"><i class="fab fa-instagram contact__icon"></i></a>
-              <a href="" class="contact__social"><i class="fab fa-twitter contact__icon"></i></a>
+              <h3 class="contact__title txt">Chat</h3>
+              <a href="" class="contact__social"><i class="fab fa-facebook-messenger"></i></a>
+              <a href="" class="contact__social"><i class="fab fa-instagram"></i></a>
+              <a href="" class="contact__social"><i class="fab fa-twitter"></i></a>
             </div>
 
           </div>
@@ -459,8 +437,8 @@
 
     <footer class="footer">
       <div class="footer__container bd__container">
-        <h2 class="footer__title">Bence</h2>
-        <p class="footer__description">Hope I hear from you soon</p>
+        <h2 class="footer__title txt">Bence</h2>
+        <p class="footer__description txt">Hope I hear from you soon</p>
         <div class="footer__social">
           <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
