--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             <a href="#" class="social-icon"><i class='fab fa-github'></i></a>
           </div>
           <div class="home__introduction introduction__hidden">
-            <h3 class="home__iam" data-key="welcome">I am</h3>
+            <h3 class="home__iam" data-key="welcome"></h3>
             <h3 class="home__name" data-key="name">Bence</h3>
-            <h3 class="home__profession" data-key="profession">Web Developer</h3>
+            <h3 class="home__profession" data-key="profession"></h3>
           </div>
         </div>
       </div>
@@ -87,31 +87,24 @@
 
     <section class="about section bd__container" id="about">
       <div class="section__hidden hidden">
-        <span class="section__subtitle" data-key="aboutSubtitle">My history</span>
-        <h2 class="section__title" data-key="aboutTitle">About Me</h2>
+        <span class="section__subtitle" data-key="aboutSubtitle"></span>
+        <h2 class="section__title" data-key="aboutTitle"></h2>
         <div class="about__container bd__grid">
           <div class="about__data bd__grid">
-            <p class="about__description" data-key="aboutDescription1">Botár Bence vagyok és Budapesten élek.
-              Professzionális zenészként eltöltött 20 év után, a 2020/21-es pandémia okozta korlátozások alatt kezdtem
-              új kihívásokat keresni. Mindig is érdekeltek a kreatív, építő, alkotó és elgondolkodtató feladatok, ezért
-              döntöttem úgy, hogy
-              belevágok a webfejlesztésbe.</p>
+            <h3 class="about__welcome">Hello</h3>
+            <p class="about__description" data-key="aboutDescription1"></p>
             <p class="about__description" data-key="aboutDescription2">
-              2020 tavaszán részt vettem a GreenFox Academy több hetes „MyFirstApp Coding” tréningjén, sikeresen
-              elvégeztem 2020 nyarán a magyar állam által támogatott „Újratervezés programot”, illetve mindezzel
-              párhuzamosan folyamatosan képeztem magam a freeCodeCamp és Udemy online webfejlesztői kurzusain.
             </p>
             <p class="about__description" data-key="aboutDescription3">
-              Célom, olyan projektek megvalósítása, ahol az eddig megszerezett tudásomat alkalmazhatom és
-              gyarapíthatom a gyakorlatban.
+
             </p>
             <div>
               <span class="about__number">1+</span>
-              <span class="about__achievement" data-key="aboutExperience">Years of Experience</span>
+              <span class="about__achievement" data-key="aboutExperience"></span>
             </div>
             <div>
               <span class="about__number">10+</span>
-              <span class="about__achievement" data-key="aboutProjects">Projects</span>
+              <span class="about__achievement" data-key="aboutProjects"></span>
             </div>
 
           </div>
@@ -127,73 +120,13 @@
     <section class="skills section bd__container" id="skills">
       <div class="section__hidden hidden">
 
-        <span class="section__subtitle" data-key="skillsSubtitle">Competence</span>
-        <h2 class="section__title" data-key="skillsTitle">Skills</h2>
+        <span class="section__subtitle" data-key="skillsSubtitle"></span>
+        <h2 class="section__title" data-key="skillsTitle"></h2>
 
-        <h3 class="skills__title" data-key="skillTitle"><i class="fas fa-code skills__title-ico"></i>Professional
-          Skills</h3>
-        <p class="skills__text" data-key="skillText">Lorem ipsum dolor sit.</p>
+        <h3 class="skills__title" data-key="skillTitle"><i class="fas fa-code skills__title-ico"></i>
+        </h3>
+        <p class="skills__text" data-key="skillText"></p>
         <div class="skills__container bd__grid">
-
-          <div class="skill__data">
-            <div class="skill__names">
-              <i class="fab fa-html5 skill__icon"></i>
-              <span class="skill__name">HTML5</span>
-            </div>
-            <div class="skill__bar skill__html">
-            </div>
-            <div>
-              <span class="skill__percentage">90%</span>
-            </div>
-          </div>
-
-          <div class="skill__data">
-            <div class="skill__names">
-              <i class="fab fa-css3-alt skill__icon"></i>
-              <span class="skill__name">CSS3</span>
-            </div>
-            <div class="skill__bar skill__css">
-            </div>
-            <div>
-              <span class="skill__percentage">80%</span>
-            </div>
-          </div>
-
-          <div class="skill__data">
-            <div class="skill__names">
-              <i class="fab fa-js skill__icon"></i>
-              <span class="skill__name">JAVASCRIPT</span>
-            </div>
-            <div class="skill__bar skill__js">
-            </div>
-            <div>
-              <span class="skill__percentage">75%</span>
-            </div>
-          </div>
-
-          <div class="skill__data">
-            <div class="skill__names">
-              <i class="fas fa-desktop skill__icon"></i>
-              <span class="skill__name">UX/UI</span>
-            </div>
-            <div class="skill__bar skill__ux">
-            </div>
-            <div>
-              <span class="skill__percentage">85%</span>
-            </div>
-          </div>
-
-          <div class="skill__data">
-            <div class="skill__names">
-              <i class="fab fa-react skill__icon"></i>
-              <span class="skill__name">React/Redux</span>
-            </div>
-            <div class="skill__bar skill__react">
-            </div>
-            <div>
-              <span class="skill__percentage">65%</span>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -203,13 +136,13 @@
     <section class="qualifications section bd__container">
       <div class="section__hidden hidden">
 
-        <span class="section__subtitle" data-key="qualificationsSubtitle">Experience and Education</span>
-        <h2 class="section__title" data-key="qualificationsTitle">Qualifications</h2>
+        <span class="section__subtitle" data-key="qualificationsSubtitle"></span>
+        <h2 class="section__title" data-key="qualificationsTitle"></h2>
 
         <div class="qualification__container bd__grid">
           <div class="qualification__content">
             <h3 class="qualification__title" data-key="workTitle">
-              <i class="fas fa-suitcase qualification__title-ico"></i>Work Experience
+              <i class="fas fa-suitcase qualification__title-ico"></i>
             </h3>
             <div class="bd__grid">
 
@@ -245,7 +178,7 @@
 
           <div class="qualification__content">
             <h3 class="qualification__title" data-key="educationTitle">
-              <i class="fas fa-university qualification__title-ico"></i>Education
+              <i class="fas fa-university qualification__title-ico"></i>
             </h3>
             <div class="bd__grid">
 
@@ -287,30 +220,30 @@
     <section class="services section bd__container" id="services">
       <div class="section__hidden hidden">
 
-        <span class="section__subtitle" data-key="servicesSubtitle">What I offer</span>
-        <h2 class="section__title" data-key="servicesTitle">Services</h2>
+        <span class="section__subtitle" data-key="servicesSubtitle"></span>
+        <h2 class="section__title" data-key="servicesTitle"></h2>
 
         <div class="services__container bd__grid">
 
           <div class="service__data">
             <i class="fas fa-project-diagram"></i>
-            <h3 class="service__title" data-key="uiuxTitle">UI/UX Design</h3>
-            <p class="service__description" data-key="uiuxDescription">asfgsdgsdfgsdfgsdfgsdfgsdfgsdfgd</p>
-            <a href="" class="button" data-key="serviceButton">Know More</a>
+            <h3 class="service__title" data-key="uiuxTitle"></h3>
+            <p class="service__description" data-key="uiuxDescription"></p>
+            <a href="" class="button" data-key="serviceButton"></a>
           </div>
 
           <div class="service__data">
             <i class="fas fa-laptop-code"></i>
-            <h3 class="service__title" data-key="webdevTitle">Web development</h3>
-            <p class="service__description" data-key="webdevDescription">asfgsdfsssfsffgsdfgsdfgsdfgd</p>
-            <a href="" class="button" data-key="serviceButton">Know More</a>
+            <h3 class="service__title" data-key="webdevTitle"></h3>
+            <p class="service__description" data-key="webdevDescription"></p>
+            <a href="" class="button" data-key="serviceButton"></a>
           </div>
 
           <div class="service__data">
             <i class="fas fa-pencil-ruler"></i>
-            <h3 class="service__title" data-key="graphicDesignTitle">Graphic Design</h3>
-            <p class="service__description" data-key="graphicDesignDescription">Coming Soon</p>
-            <a href="" class="button" data-key="serviceButton">Know More</a>
+            <h3 class="service__title" data-key="graphicDesignTitle"></h3>
+            <p class="service__description" data-key="graphicDesignDescription"></p>
+            <a href="" class="button" data-key="serviceButton"></a>
           </div>
         </div>
       </div>
@@ -326,12 +259,12 @@
             <i class="bx bx-spreadsheet project__icon"></i>
 
             <div>
-              <h2 class="project__title" data-key="projectTitle">Projects in mind</h2>
-              <p class="project__description" data-key="projectDescription">Contact me if you would like your ideas to
-                be implemented</p>
+              <h2 class="project__title" data-key="projectTitle"></h2>
+              <p class="project__description" data-key="projectDescription">
+              </p>
             </div>
             <div>
-              <a href="" class="button button-light" data-key="projectButton">Hire Me</a>
+              <a href="" class="button button-light" data-key="projectButton"></a>
             </div>
           </div>
 
@@ -342,10 +275,10 @@
 
     <section class="portfolio section bd__container" id="portfolio">
       <div class="section__hidden hidden">
-        <span class="section__subtitle" data-key="portfoliosSubtitle">My recents work</span>
-        <h2 class="section__title" data-key="portfoliosTitle">Portfolio</h2>
+        <span class="section__subtitle" data-key="portfoliosSubtitle"></span>
+        <h2 class="section__title" data-key="portfoliosTitle"></h2>
         <div class="portfolio__nav">
-          <span class="portfolio__item" data-key="portfolioNavAll">All</span>
+          <span class="portfolio__item" data-key="portfolioNavAll">l</span>
           <span class="portfolio__item">Web</span>
           <span class="portfolio__item">UI</span>
           <span class="portfolio__item">App</span>
@@ -371,8 +304,8 @@
     <section class="testimonial section bd__container">
       <div class="section__hidden hidden">
 
-        <span class="section__subtitle" data-key="testimonialSubtitle">Client reviews</span>
-        <h2 class="section__title" data-key="testimonialTitle">Testimonial</h2>
+        <span class="section__subtitle" data-key="testimonialSubtitle"></span>
+        <h2 class="section__title" data-key="testimonialTitle"></h2>
         <div class="testimonial__container">
           <div>
             <div class="testimonial__content">
@@ -391,20 +324,20 @@
     <section class="contact section bd__container" id="contact">
       <div class="section__hidden hidden">
 
-        <span class="section__subtitle" data-key="contactsSubtitle">Feel free to</span>
-        <h2 class="section__title" data-key="contactsTitle">Contact me</h2>
+        <span class="section__subtitle" data-key="contactsSubtitle"></span>
+        <h2 class="section__title" data-key="contactsTitle"></h2>
 
         <div class="contact__container bd__grid">
 
           <div class="contact__content bd__grid">
             <div class="contact__box">
               <i class="fas fa-map-marked-alt contact__icon"></i>
-              <h3 class="contact__title" data-key="location">Location</h3>
-              <span class="contact__description" data-key="locationPlace">Budapest, Hungary</span>
+              <h3 class="contact__title" data-key="location"></h3>
+              <span class="contact__description" data-key="locationPlace"></span>
             </div>
             <div class="contact__box">
               <i class="fas fa-phone-alt contact__icon"></i>
-              <h3 class="contact__title" data-key="phone">Phone</h3>
+              <h3 class="contact__title" data-key="phone"></h3>
               <span class="contact__description">555-CALL-ME</span>
             </div>
             <div class="contact__box">
@@ -414,7 +347,7 @@
             </div>
             <div class="contact__box">
               <i class="fas fa-comments contact__icon"></i>
-              <h3 class="contact__title" data-key="chat">Chat</h3>
+              <h3 class="contact__title" data-key="chat"></h3>
               <a href="" class="contact__social"><i class="fab fa-facebook-messenger"></i></a>
               <a href="" class="contact__social"><i class="fab fa-instagram"></i></a>
               <a href="" class="contact__social"><i class="fab fa-twitter"></i></a>
@@ -442,7 +375,7 @@
     <footer class="footer">
       <div class="footer__container bd__container">
         <h2 class="footer__title">Bence</h2>
-        <p class="footer__description" data-key="footerDescription">Hope I hear from you soon</p>
+        <p class="footer__description" data-key="footerDescription"></p>
         <div class="footer__social">
           <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
