--- a/index.html
+++ b/index.html
@@ -226,24 +226,44 @@
         <div class="services__container bd__grid">
 
           <div class="service__data">
-            <i class="fas fa-project-diagram"></i>
-            <h3 class="service__title" data-key="uiuxTitle"></h3>
-            <p class="service__description" data-key="uiuxDescription"></p>
-            <a href="" class="button" data-key="serviceButton"></a>
+            <div class="card__container">
+              <div class="card">
+                <i class="fas fa-project-diagram"></i>
+                <h3 class="service__title" data-key="uiuxTitle"></h3>
+                <p class="service__description" data-key="uiuxDescription"></p>
+                <a href="#" class="button service__button" data-key="serviceButton"></a>
+              </div>
+              <div class="card card-back">
+                <p class="service__description" data-key="uiuxDescription"></p>
+              </div>
+            </div>
           </div>
 
           <div class="service__data">
-            <i class="fas fa-laptop-code"></i>
-            <h3 class="service__title" data-key="webdevTitle"></h3>
-            <p class="service__description" data-key="webdevDescription"></p>
-            <a href="" class="button" data-key="serviceButton"></a>
+            <div class="card__container">
+              <div class="card">
+                <i class="fas fa-laptop-code"></i>
+                <h3 class="service__title" data-key="webdevTitle"></h3>
+                <p class="service__description" data-key="webdevDescription"></p>
+                <a href="#" class="button service__button" data-key="serviceButton"></a>
+              </div>
+              <div class="card card-back">
+                <p class="service__description" data-key="uiuxDescription"></p>
+              </div>
+            </div>
           </div>
-
           <div class="service__data">
-            <i class="fas fa-pencil-ruler"></i>
-            <h3 class="service__title" data-key="graphicDesignTitle"></h3>
-            <p class="service__description" data-key="graphicDesignDescription"></p>
-            <a href="" class="button" data-key="serviceButton"></a>
+            <div class="card__container">
+              <div class="card">
+                <i class="fas fa-pencil-ruler"></i>
+                <h3 class="service__title" data-key="graphicDesignTitle"></h3>
+                <p class="service__description" data-key="graphicDesignDescription"></p>
+                <a href="#" class="button service__button" data-key="serviceButton"></a>
+              </div>
+              <div class="card card-back">
+                <p class="service__description" data-key="uiuxDescription"></p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
