--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <i class="fas fa-project-diagram"></i>
                 <h3 class="service__title" data-key="uiuxTitle"></h3>
                 <p class="service__description" data-key="uiuxDescription"></p>
-                <a href="#" class="button service__button" data-key="serviceButton"></a>
+                <button class="button service__button" data-key="serviceButton"></button>
               </div>
               <div class="card card-back">
                 <p class="service__description" data-key="uiuxDescription"></p>
@@ -245,7 +245,7 @@
                 <i class="fas fa-laptop-code"></i>
                 <h3 class="service__title" data-key="webdevTitle"></h3>
                 <p class="service__description" data-key="webdevDescription"></p>
-                <a href="#" class="button service__button" data-key="serviceButton"></a>
+                <button class="button service__button" data-key="serviceButton"></button>
               </div>
               <div class="card card-back">
                 <p class="service__description" data-key="uiuxDescription"></p>
@@ -258,7 +258,7 @@
                 <i class="fas fa-pencil-ruler"></i>
                 <h3 class="service__title" data-key="graphicDesignTitle"></h3>
                 <p class="service__description" data-key="graphicDesignDescription"></p>
-                <a href="#" class="button service__button" data-key="serviceButton"></a>
+                <button class="button service__button" data-key="serviceButton"></button>
               </div>
               <div class="card card-back">
                 <p class="service__description" data-key="uiuxDescription"></p>
@@ -284,7 +284,7 @@
               </p>
             </div>
             <div>
-              <a href="" class="button button-light" data-key="projectButton"></a>
+              <a href="#contact" class="button button-light" data-key="projectButton"></a>
             </div>
           </div>
 
@@ -312,7 +312,7 @@
               <a href="">
                 <h2 class="portfolio__title">New portfolio</h2>
               </a>
-              <a href="" class="button button-link">View Details</a>
+              <button class="button button-link">View Details</button>
             </div>
           </div>
         </div>
@@ -384,7 +384,7 @@
               <input type="number" placeholder="Number" class="contact__input">
             </div>
             <textarea name="" id="" cols="0" rows="7" placeholder="Message" class="contact__input"></textarea>
-            <input type="submit" value="Send Message" class="button contact__button" data-key="contactButton">
+            <button type="submit" class="button contact__button" data-key="contactButton"></button>
           </form>
         </div>
       </div>
@@ -405,6 +405,16 @@
       </div>
     </footer>
   </main>
+
+  <!-- MODAL -->
+
+  <div class="modal modal--hidden">
+    <button class="modal__close">X</button>
+    <div class="modal__container">
+
+    </div>
+  </div>
+  <div class="overlay modal--hidden"></div>
 </body>
 
 </html>
