--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
         </div>
         <div class="home__bottom">
           <div class="home__social social__hidden">
-            <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
-            <a href="#" class="social-icon"><i class='fab fa-github'></i></a>
+            <a href="#" class="social-icon" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/bence-bot%C3%A1r-28903060" class="social-icon" target="_blank"><i
+                class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/botarbence" class="social-icon" target="_blank"><i
+                class='fab fa-github'></i></a>
           </div>
           <div class="home__introduction introduction__hidden">
             <h3 class="home__iam" data-key="welcome"></h3>
@@ -387,9 +389,9 @@
         <h2 class="footer__title">Bence</h2>
         <p class="footer__description" data-key="footerDescription"></p>
         <div class="footer__social">
-          <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="social-icon" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="social-icon" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
         <p class="footer__copy">&#169; <span class="date"></span> Bence Botar</p>
       </div>
